<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <include
        android:id="@+id/top_bar"
        layout="@layout/app_toolbar">
    </include>
    <RelativeLayout
        android:layout_below="@id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color" >

        <RelativeLayout
            android:id="@+id/rel_username_pwd"
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:background="@drawable/app_task_item_bg_with_shadow" >

            <EditText
                android:id="@+id/et_username"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="#FFFFFF"
                android:hint="@string/register_username"
                android:inputType="number"
                android:maxLength="16"
                android:textColor="#595959"
                android:textColorHint="#595959"
                android:textSize="14sp" />

            <View
                android:id="@+id/line_username"
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:layout_below="@id/et_username"
                android:background="#FFBFBFBF" />

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="fill_parent"
                android:layout_height="49dp"
                android:layout_below="@id/line_username"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="#FFFFFF"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLength="16"
                android:textColor="#595959"
                android:textColorHint="#595959"
                android:textSize="14sp" />

            <View
                android:id="@+id/line_password"
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:layout_below="@id/edt_password"
                android:background="#BFBFBF" />

            <EditText
                android:id="@+id/edt_confirm_password"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:layout_below="@id/line_password"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="#FFFFFF"
                android:hint="@string/hint_confirm_password"
                android:inputType="textPassword"
                android:maxLength="16"
                android:textColor="#595959"
                android:textColorHint="#595959"
                android:textSize="14sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rel_verify_code"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_below="@id/rel_username_pwd"
            android:layout_marginTop="15dp"
            android:background="@drawable/app_task_item_bg_with_shadow" >

            <EditText
                android:id="@+id/et_verify_code"
                android:layout_width="150dip"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:background="@null"
                android:hint="@string/register_verifycode"
                android:inputType="number"
                android:maxLength="4"
                android:textColor="#595959"
                android:textColorHint="#595959"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_verify_code"
                android:layout_width="92dp"
                android:layout_height="35dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_margin="8dip"
                android:layout_marginRight="15dp"
                android:background="#F5A623"
                android:text="获取验证码"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rel_invite_code"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/app_task_item_bg_with_shadow"
            android:layout_below="@+id/rel_verify_code" >

            <EditText
                android:id="@+id/et_invite_code"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:hint="@string/register_invite_code"
                android:inputType="number"
                android:background="@null"
                android:layout_marginLeft="15dp"
                android:textSize="14sp"
                android:textColor="#595959"
                android:textColorHint="#595959"
                android:maxLength="6" />

            <TextView
                android:id="@+id/txt_invite_code"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="#A5A5A5"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dp"
                android:text="@string/register_can_null"/>
        </RelativeLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:layout_below="@id/rel_invite_code"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/btn_login"
            android:text="@string/register_label"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/license_tv"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_below="@id/btn_register"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/register_license_hint"
            android:textSize="12sp" />
    </RelativeLayout>
</RelativeLayout>