<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rel_scroll_msg"
        android:layout_width="match_parent"
        android:layout_height="32dp">

        <ImageView
            android:id="@+id/img_icon_notice"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:background="@mipmap/icon_notice"/>

        <com.xiaohong.wifikulian.utils.view.widget.AutoScrollTextView
            android:id="@+id/txt_scroll_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/img_icon_notice"
            android:lines="1"
            android:singleLine="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:ellipsize="marquee"
            android:textColor="@color/text_color_current_connect"
            android:focusableInTouchMode="true"
            android:textSize="12sp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_banner"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_below="@+id/rel_scroll_msg">
        <android.support.v4.view.ViewPager
            android:id="@+id/viewpage_banner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <LinearLayout
            android:id="@+id/points"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="6dp"
            android:orientation="horizontal" >
        </LinearLayout>
    </RelativeLayout>


    <android.support.v7.widget.CardView
        android:id="@+id/card_function"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rel_banner"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:paddingBottom="7dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="1dp"
        app:cardElevation="1dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/gallery_function"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_recommend_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card_function"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="8dp"
        android:paddingBottom="7dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="1dp"
        app:cardElevation="1dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="9dp"
                android:text="@string/recommend_task"
                android:textColor="@color/text_color_recomment_title"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/txt_recommend_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/all"
                android:textColor="@color/text_color_all"
                android:textSize="13sp"/>

            <View
                android:id="@+id/line_recommend_task"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_below="@+id/txt_recommend_task"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/view_color_split_line"
                />
            <android.support.v7.widget.RecyclerView
                android:id="@+id/list_recommend_task"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:cacheColorHint="@null"
                android:background="@color/background_color"
                android:layout_below="@+id/line_recommend_task"
                android:scrollbars="vertical"/>

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_read"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card_recommend_task"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="1dp"
        app:cardElevation="1dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="9dp"
                android:text="@string/read"
                android:textColor="@color/text_color_recomment_title"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/txt_read"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/all"
                android:textColor="@color/text_color_all"
                android:textSize="13sp"/>

            <View
                android:id="@+id/line_qq_read"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_below="@+id/txt_read"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/view_color_split_line"
                />
            <android.support.v7.widget.RecyclerView
                android:id="@+id/list_qq_read"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:cacheColorHint="@null"
                android:background="@color/white"
                android:layout_below="@+id/line_qq_read"
                android:scrollbars="vertical"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>